force-app/main/default/objects/Program/fields/gr_AuthorizingLegislation__c.field-meta.xml
<CustomField>
    <fullName>gr_AuthorizingLegislation__c</fullName>
    <description>A citation or text referencing the authorizing legislation that enables the grant program to exist.</description>
    <label>Authorizing Legislation</label>
    <type>TextArea</type>
</CustomField>