force-app/main/default/objects/Program/fields/gr_CFDANumber__c.field-meta.xml
<CustomField>
    <fullName>gr_CFDANumber__c</fullName>
    <label>CFDA Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>