force-app/main/default/objects/Program/fields/gr_CloseoutInformation__c.field-meta.xml
<CustomField>
    <fullName>gr_CloseoutInformation__c</fullName>
    <description>A description of grant program level closeout information provided to OMB-designated repository(ies).</description>
    <inlineHelpText>A description of grant program level closeout information provided to OMB-designated repository(ies).</inlineHelpText>
    <label>Closeout Information</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>