force-app/main/default/objects/Program/fields/gr_Financial_Assistance_Listing_Number__c.field-meta.xml
<CustomField>
    <fullName>gr_Financial_Assistance_Listing_Number__c</fullName>
    <description>A unique number assigned to identify a Federal financial assistance listing in the Assistance Listing. (compiled from 187)</description>
    <label>Financial Assistance Listing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>