force-app/main/default/objects/Program/fields/gr_Financial_Assistance_Listing_Title__c.field-meta.xml
<CustomField>
    <fullName>gr_Financial_Assistance_Listing_Title__c</fullName>
    <description>A Federal financial assistance listing of the area of work under which the Federal award was funded in the Assistance Listing. (187, augmented)</description>
    <label>Financial Assistance Listing Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>