force-app/main/default/objects/Program/fields/gr_FormulaCalculation__c.field-meta.xml
<CustomField>
    <fullName>gr_FormulaCalculation__c</fullName>
    <description>A description of the calculation(s)/algorithm(s) used to determine distribution of funding for formula grants as prescribed by law or administrative regulation.</description>
    <inlineHelpText>calculation(s)/algorithm(s) used to determine distribution of funding</inlineHelpText>
    <label>Formula Calculation</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>