force-app/main/default/objects/Program/fields/gr_FundingBasisType__c.field-meta.xml
<CustomField>
    <fullName>gr_FundingBasisType__c</fullName>
    <description>A code denoting whether the funding allocation is discretionary or non-discretionary.</description>
    <label>Funding Basis Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discretionary</fullName>
            </value>
            <value>
                <fullName>Non-discretionary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>