force-app/main/default/objects/Program/fields/gr_FundsReprogramming__c.field-meta.xml
<CustomField>
    <fullName>gr_FundsReprogramming__c</fullName>
    <description>A description of the need for grant program funds reprogramming after evaluation of program performance and financial reports.</description>
    <inlineHelpText>A description of the need for grant program funds reprogramming after evaluation of program performance and financial reports.</inlineHelpText>
    <label>Funds Reprogramming</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>