force-app/main/default/objects/Program/fields/gr_GrantProgramCode__c.field-meta.xml
<CustomField>
    <fullName>gr_GrantProgramCode__c</fullName>
    <description>Code of an agency grant program in the grant program and financing schedules of the annual budget of the United States Government.</description>
    <label>Grant Program Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>