force-app/main/default/objects/Program/fields/gr_InterestEventCode__c.field-meta.xml
<CustomField>
    <fullName>gr_InterestEventCode__c</fullName>
    <description>A descriptive name of the national interest for which the grant program is created.</description>
    <inlineHelpText>A descriptive name of the national interest for which the grant program is created.</inlineHelpText>
    <label>Interest Event Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>