force-app/main/default/objects/Program/fields/gr_InterestEventName__c.field-meta.xml
<CustomField>
    <fullName>gr_InterestEventName__c</fullName>
    <description>A name that represents the national interest for which the grant program is created.</description>
    <inlineHelpText>A name that represents the national interest for which the grant program is created.</inlineHelpText>
    <label>Interest Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>