force-app/main/default/objects/Program/fields/gr_isCMIA__c.field-meta.xml
<CustomField>
    <fullName>gr_isCMIA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An indicator identifying whether the grant program is subject to the Cash Management Improvement Act (CMIA).</description>
    <label>Cash Management Improvement Act</label>
    <type>Checkbox</type>
</CustomField>