force-app/main/default/objects/Program/fields/gr_isMajorProgram__c.field-meta.xml
<CustomField>
    <fullName>gr_isMajorProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An indication of whether or not the grant program is a major program.</description>
    <inlineHelpText>An indication of whether or not the grant program is a major program.</inlineHelpText>
    <label>Major Program Indicator</label>
    <type>Checkbox</type>
</CustomField>