force-app/main/default/objects/Program/fields/gr_LessonsLearned__c.field-meta.xml
<CustomField>
    <fullName>gr_LessonsLearned__c</fullName>
    <description>A description of the grant program lessons learned and promising practices.</description>
    <inlineHelpText>A description of the grant program lessons learned and promising practices.</inlineHelpText>
    <label>Lessons Learned</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>