force-app/main/default/objects/Program/fields/gr_ParticipationDenialConditions__c.field-meta.xml
<CustomField>
    <fullName>gr_ParticipationDenialConditions__c</fullName>
    <description>A description of the conditions or criteria under which a legal entity would be denied participation, including limited denial, in a grant program.</description>
    <inlineHelpText>A description of the conditions or criteria under which a legal entity would be denied participation, including limited denial, in a grant program.</inlineHelpText>
    <label>Participation Denial Conditions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>