force-app/main/default/objects/Program/fields/gr_PriorAuditSignificantFindings__c.field-meta.xml
<CustomField>
    <fullName>gr_PriorAuditSignificantFindings__c</fullName>
    <description>A description of significant findings reported in past grant program audits.</description>
    <inlineHelpText>A description of significant findings reported in past grant program audits.</inlineHelpText>
    <label>Prior Audit Significant Findings</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>