force-app/main/default/objects/Program/fields/gr_ProblemStatement__c.field-meta.xml
<CustomField>
    <fullName>gr_ProblemStatement__c</fullName>
    <description>A description of the nature and extent of the problem to be addressed by the grant program, including how the grant program may relate to Congressional intent in authorizing and appropriations language, the priorities of agency leadership, and/or the less</description>
    <label>Problem Statement</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>