force-app/main/default/objects/Program/fields/gr_StatutoryAuthority__c.field-meta.xml
<CustomField>
    <fullName>gr_StatutoryAuthority__c</fullName>
    <description>A description of the statutory or regulatory requirements applicable to the grant program.</description>
    <label>Statutory Authority</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>