force-app/main/default/objects/Program/fields/gr_TotalExpendituresAmount__c.field-meta.xml
<CustomField>
    <fullName>gr_TotalExpendituresAmount__c</fullName>
    <description>A dollar amount of total Federal awards expended in a single fiscal year by a Federal grant program.</description>
    <label>Total Expenditures Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>