force-app/main/default/objects/Program/fields/gr_Trends__c.field-meta.xml
<CustomField>
    <fullName>gr_Trends__c</fullName>
    <description>A description of grant program trends, significant problems, or quality issues identified during program review.</description>
    <inlineHelpText>A description of grant program trends, significant problems, or quality issues identified during program review.</inlineHelpText>
    <label>Trends</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>