force-app/main/default/objects/Program/recordTypes/gr_Program_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>gr_Program_Record_Type</fullName>
    <active>true</active>
    <label>Program Record Type</label>
</RecordType>